--- a/src/sass/_sprites.scss
+++ b/src/sass/_sprites.scss
@@ -11,22 +11,121 @@ $icon-home: x y offset_x offset_y width height total_width total_height image_pa
 At the bottom of this section, we provide information about the spritesheet itself
 $spritesheet: width height image $spritesheet-sprites;
 */
+$bullet-name: 'bullet';
+$bullet-x: 974px;
+$bullet-y: 145px;
+$bullet-offset-x: -974px;
+$bullet-offset-y: -145px;
+$bullet-width: 35px;
+$bullet-height: 34px;
+$bullet-total-width: 1159px;
+$bullet-total-height: 322px;
+$bullet-image: '../images/sprite.png';
+$bullet: (974px, 145px, -974px, -145px, 35px, 34px, 1159px, 322px, '../images/sprite.png', 'bullet', );
+$button-1-name: 'button-1';
+$button-1-x: 370px;
+$button-1-y: 145px;
+$button-1-offset-x: -370px;
+$button-1-offset-y: -145px;
+$button-1-width: 342px;
+$button-1-height: 75px;
+$button-1-total-width: 1159px;
+$button-1-total-height: 322px;
+$button-1-image: '../images/sprite.png';
+$button-1: (370px, 145px, -370px, -145px, 342px, 75px, 1159px, 322px, '../images/sprite.png', 'button-1', );
+$button-2-name: 'button-2';
+$button-2-x: 307px;
+$button-2-y: 233px;
+$button-2-offset-x: -307px;
+$button-2-offset-y: -233px;
+$button-2-width: 301px;
+$button-2-height: 89px;
+$button-2-total-width: 1159px;
+$button-2-total-height: 322px;
+$button-2-image: '../images/sprite.png';
+$button-2: (307px, 233px, -307px, -233px, 301px, 89px, 1159px, 322px, '../images/sprite.png', 'button-2', );
+$button-3-name: 'button-3';
+$button-3-x: 0px;
+$button-3-y: 233px;
+$button-3-offset-x: 0px;
+$button-3-offset-y: -233px;
+$button-3-width: 307px;
+$button-3-height: 89px;
+$button-3-total-width: 1159px;
+$button-3-total-height: 322px;
+$button-3-image: '../images/sprite.png';
+$button-3: (0px, 233px, 0px, -233px, 307px, 89px, 1159px, 322px, '../images/sprite.png', 'button-3', );
+$button-4-name: 'button-4';
+$button-4-x: 0px;
+$button-4-y: 145px;
+$button-4-offset-x: 0px;
+$button-4-offset-y: -145px;
+$button-4-width: 370px;
+$button-4-height: 88px;
+$button-4-total-width: 1159px;
+$button-4-total-height: 322px;
+$button-4-image: '../images/sprite.png';
+$button-4: (0px, 145px, 0px, -145px, 370px, 88px, 1159px, 322px, '../images/sprite.png', 'button-4', );
+$header-name: 'header';
+$header-x: 0px;
+$header-y: 0px;
+$header-offset-x: 0px;
+$header-offset-y: 0px;
+$header-width: 1159px;
+$header-height: 145px;
+$header-total-width: 1159px;
+$header-total-height: 322px;
+$header-image: '../images/sprite.png';
+$header: (0px, 0px, 0px, 0px, 1159px, 145px, 1159px, 322px, '../images/sprite.png', 'header', );
 $logotype-name: 'logotype';
-$logotype-x: 0px;
-$logotype-y: 0px;
-$logotype-offset-x: 0px;
-$logotype-offset-y: 0px;
+$logotype-x: 712px;
+$logotype-y: 145px;
+$logotype-offset-x: -712px;
+$logotype-offset-y: -145px;
 $logotype-width: 148px;
 $logotype-height: 52px;
-$logotype-total-width: 148px;
-$logotype-total-height: 52px;
+$logotype-total-width: 1159px;
+$logotype-total-height: 322px;
 $logotype-image: '../images/sprite.png';
-$logotype: (0px, 0px, 0px, 0px, 148px, 52px, 148px, 52px, '../images/sprite.png', 'logotype', );
-$spritesheet-width: 148px;
-$spritesheet-height: 52px;
+$logotype: (712px, 145px, -712px, -145px, 148px, 52px, 1159px, 322px, '../images/sprite.png', 'logotype', );
+$radio-selected-name: 'radio-selected';
+$radio-selected-x: 894px;
+$radio-selected-y: 145px;
+$radio-selected-offset-x: -894px;
+$radio-selected-offset-y: -145px;
+$radio-selected-width: 40px;
+$radio-selected-height: 40px;
+$radio-selected-total-width: 1159px;
+$radio-selected-total-height: 322px;
+$radio-selected-image: '../images/sprite.png';
+$radio-selected: (894px, 145px, -894px, -145px, 40px, 40px, 1159px, 322px, '../images/sprite.png', 'radio-selected', );
+$radio-name: 'radio';
+$radio-x: 934px;
+$radio-y: 145px;
+$radio-offset-x: -934px;
+$radio-offset-y: -145px;
+$radio-width: 40px;
+$radio-height: 40px;
+$radio-total-width: 1159px;
+$radio-total-height: 322px;
+$radio-image: '../images/sprite.png';
+$radio: (934px, 145px, -934px, -145px, 40px, 40px, 1159px, 322px, '../images/sprite.png', 'radio', );
+$select-name: 'select';
+$select-x: 860px;
+$select-y: 145px;
+$select-offset-x: -860px;
+$select-offset-y: -145px;
+$select-width: 34px;
+$select-height: 50px;
+$select-total-width: 1159px;
+$select-total-height: 322px;
+$select-image: '../images/sprite.png';
+$select: (860px, 145px, -860px, -145px, 34px, 50px, 1159px, 322px, '../images/sprite.png', 'select', );
+$spritesheet-width: 1159px;
+$spritesheet-height: 322px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($logotype, );
-$spritesheet: (148px, 52px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($bullet, $button-1, $button-2, $button-3, $button-4, $header, $logotype, $radio-selected, $radio, $select, );
+$spritesheet: (1159px, 322px, '../images/sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
